--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-validar-requisitos-pago/components/datos-factura-construccion-rvrp/datos-factura-construccion-rvrp.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-validar-requisitos-pago/components/datos-factura-construccion-rvrp/datos-factura-construccion-rvrp.component.html
@@ -9,7 +9,8 @@
       <h2 class="card-subTitle">Descripción de la factura</h2>
       <p><strong>Número de factura:</strong> {{ addressForm.get( 'numeroFactura' ).value }} </p>
       <p><strong>Fecha de factura:</strong> {{ addressForm.get( 'fechaFactura' ).value | date: 'dd/MM/yyyy' }} </p>
-      <p style="margin-top: 10px;"><strong>Valor facturado: </strong> ${{ valorFacturado | currency:' ':'symbol-narrow':'.0-0' }} </p>
+      <p style="margin-top: 10px;"><strong>Valor facturado: </strong> ${{ valorFacturado | currency:'
+        ':'symbol-narrow':'.0-0' }} </p>
     </mat-card-content>
   </mat-card>
 </ng-container>
@@ -27,7 +28,11 @@
           <div class="col-md-8">
             <div class="row">
               <div class="pr-1">
-                <label for="numeroFactura" class="label-left">Número de factura</label>
+                <label for="numeroFactura" class="label-left" [ngClass]="{
+                  'color-secondaryColor':
+                    (addressForm.get('numeroFactura').invalid && addressForm.get('numeroFactura').touched) ||
+                    (addressForm.get('numeroFactura').invalid && estaEditando)
+                }">Número de factura</label>
               </div>
               <div class="col d-flex">
                 <mat-form-field class="full-width">
@@ -35,6 +40,14 @@
                 </mat-form-field>
                 <span class="contador">{{10 - numeroFactura.value.length}}</span>
               </div>
+              <span class="icon-incompleto">
+                <img class="icon-incompleto--img" src="assets/img/icon/incompleto.svg" alt="este campo es requerido"
+                  [matTooltipPosition]="'above'" matTooltip="Debe ingresar la información en el campo para continuar"
+                  matTooltipClass="info-tooltip" *ngIf="
+                    (addressForm.get('numeroFactura').invalid && addressForm.get('numeroFactura').touched) ||
+                    (addressForm.get('numeroFactura').invalid && estaEditando)
+                  " />
+              </span>
             </div>
           </div>
         </div>
@@ -42,7 +55,11 @@
           <div class="col-md-8">
             <div class="row">
               <div class="pr-1">
-                <label class="label-left" for="fechaFactura">Fecha de factura</label>
+                <label class="label-left" for="fechaFactura" [ngClass]="{
+                  'color-secondaryColor':
+                    (addressForm.get('fechaFactura').invalid && addressForm.get('fechaFactura').touched) ||
+                    (addressForm.get('fechaFactura').invalid && estaEditando)
+                }">Fecha de factura</label>
               </div>
               <div class="col d-flex align-items-center">
                 <mat-form-field class="example-full-width">
@@ -54,10 +71,19 @@
                   <img src="assets/img/icon/calendarioCirculo.svg" alt="Abrir Calendario">
                 </button>
               </div>
+              <span class="icon-incompleto">
+                <img class="icon-incompleto--img" src="assets/img/icon/incompleto.svg" alt="este campo es requerido"
+                  [matTooltipPosition]="'above'" matTooltip="Debe ingresar la información en el campo para continuar"
+                  matTooltipClass="info-tooltip" *ngIf="
+                    (addressForm.get('fechaFactura').invalid && addressForm.get('fechaFactura').touched) ||
+                    (addressForm.get('fechaFactura').invalid && estaEditando)
+                  " />
+              </span>
             </div>
           </div>
         </div>
-        <p style="margin-top: 10px;"><strong>Valor facturado: </strong> ${{ valorFacturado | currency:' ':'symbol-narrow':'.0-0' }} </p>
+        <p style="margin-top: 10px;"><strong>Valor facturado: </strong> ${{ valorFacturado | currency:'
+          ':'symbol-narrow':'.0-0' }} </p>
 
         <!--
             Se comenta el formulario de descuentos 'fix diseño' cualquier novedad restaurar codigo comentado
