--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-validar-requisitos-pago/components/detalle-factura-proyectos-asociados/detalle-factura-proyectos-asociados.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-validar-requisitos-pago/components/detalle-factura-proyectos-asociados/detalle-factura-proyectos-asociados.component.html
@@ -129,7 +129,12 @@
                             <div class="col-md-12">
                                 <div class="row">
                                     <div class="pr-1">
-                                        <label class="label-left" for="criterioPago">Criterio</label>
+                                        <label class="label-left" for="criterioPago" 
+                                        [ngClass]="{
+                                            'color-secondaryColor':
+                                              (project.get('criterioPago').invalid && project.get('criterioPago').touched) ||
+                                              (project.get('criterioPago').invalid && estaEditando)
+                                          }">Criterio</label>
                                     </div>
                                     <div class="col">
                                         <mat-form-field class="select-width" style="width: 99%;">
@@ -140,6 +145,20 @@
                                             </mat-select>
                                         </mat-form-field>
                                     </div>
+                                    <span class="icon-incompleto">
+                                        <img
+                                          class="icon-incompleto--img"
+                                          src="assets/img/icon/incompleto.svg"
+                                          alt="este campo es requerido"
+                                          [matTooltipPosition]="'above'"
+                                          matTooltip="Debe ingresar la información en el campo para continuar"
+                                          matTooltipClass="info-tooltip"
+                                          *ngIf="
+                                          (project.get('criterioPago').invalid && project.get('criterioPago').touched) ||
+                                          (project.get('criterioPago').invalid && estaEditando)
+                                          "
+                                        />
+                                      </span>
                                 </div>
                             </div>
                         </div>
@@ -152,7 +171,12 @@
                                     <div class="col-md-8">
                                       <div class="row">
                                         <div class="pr-1">
-                                            <label class="label-left" for="valorFacturado">
+                                            <label class="label-left" for="valorFacturado"
+                                            [ngClass]="{
+                                                'color-secondaryColor':
+                                                  (criterioProyecto.get('criterioPago').invalid && criterioProyecto.get('criterioPago').touched) ||
+                                                  (criterioProyecto.get('criterioPago').invalid && estaEditando)
+                                              }">
                                                 Valor facturado para el proyecto en el criterio
                                             </label>
                                         </div>
@@ -164,6 +188,20 @@
                                           <span class="contador" [matTooltipPosition]="'above'" matTooltip="Campo numérico" matTooltipClass="info-tooltip" *ngIf="criterioProyecto.get( 'valorFacturado' ).value !== null">{{20 - criterioProyecto.get( 'valorFacturado' ).value.toString().length}}</span>
                                           <span class="contador" [matTooltipPosition]="'above'" matTooltip="Campo numérico" matTooltipClass="info-tooltip" *ngIf="criterioProyecto.get( 'valorFacturado' ).value === null">20</span>
                                         </div>
+                                        <span class="icon-incompleto">
+                                            <img
+                                              class="icon-incompleto--img"
+                                              src="assets/img/icon/incompleto.svg"
+                                              alt="este campo es requerido"
+                                              [matTooltipPosition]="'above'"
+                                              matTooltip="Debe ingresar la información en el campo para continuar"
+                                              matTooltipClass="info-tooltip"
+                                              *ngIf="
+                                              (criterioProyecto.get('criterioPago').invalid && criterioProyecto.get('criterioPago').touched) ||
+                                              (criterioProyecto.get('criterioPago').invalid && estaEditando)
+                                              "
+                                            />
+                                          </span>
                                       </div>
                                     </div>
                                     <div class="col-md-4">
