--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-validar-requisitos-pago/components/form-amortizacion-anticipo/form-amortizacion-anticipo.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-validar-requisitos-pago/components/form-amortizacion-anticipo/form-amortizacion-anticipo.component.html
@@ -24,19 +24,27 @@
                     <div class="col-md-8">
                         <div class="row">
                             <div class="pr-1">
-                                <label for="porcentajeAmortizacion" class="label-left">Porcentaje de amortización</label>
+                                <label for="porcentajeAmortizacion" class="label-left" [ngClass]="{
+                                    'color-secondaryColor':(addressForm.get('porcentajeAmortizacion').invalid && addressForm.get('porcentajeAmortizacion').touched) ||
+                                    (addressForm.get('porcentajeAmortizacion').invalid && estaEditando)}">Porcentaje de amortización</label>
                             </div>
                             <div class="col d-flex">
                                 <mat-form-field class="full-width">
-                                    <input  matInput
-                                            #porcentajeAmortizacion
-                                            type="number"
-                                            formControlName="porcentajeAmortizacion"
-                                            (ngModelChange)="numberValidate( $event )"
-                                            required>
+                                    <input matInput #porcentajeAmortizacion type="number"
+                                        formControlName="porcentajeAmortizacion"
+                                        (ngModelChange)="numberValidate( $event )" required>
                                 </mat-form-field>
                                 <span class="contador">%</span>
                             </div>
+                            <span class="icon-incompleto">
+                                <img class="icon-incompleto--img" src="assets/img/icon/incompleto.svg"
+                                    alt="este campo es requerido" [matTooltipPosition]="'above'"
+                                    matTooltip="Debe ingresar la información en el campo para continuar"
+                                    matTooltipClass="info-tooltip" *ngIf="
+                                    (addressForm.get('porcentajeAmortizacion').invalid && addressForm.get('porcentajeAmortizacion').touched) ||
+                                    (addressForm.get('porcentajeAmortizacion').invalid && estaEditando)
+                                  " />
+                            </span>
                         </div>
                     </div>
                 </div>
@@ -44,7 +52,11 @@
                     <div class="col-md-8">
                         <div class="row">
                             <div class="pr-1">
-                                <label class="label-left" for="valorAmortizacion">
+                                <label class="label-left" for="valorAmortizacion" [ngClass]="{
+                                    'color-secondaryColor':
+                                      (addressForm.get('valorAmortizacion').invalid && addressForm.get('valorAmortizacion').touched) ||
+                                      (addressForm.get('valorAmortizacion').invalid && estaEditando)
+                                  }">
                                     Valor de amortización
                                 </label>
                             </div>
@@ -58,6 +70,15 @@
                                 <span class="contador" [matTooltipPosition]="'above'" matTooltip="Campo numérico"
                                     matTooltipClass="info-tooltip">{{20 - valorAmortizacion.value.length}}</span>
                             </div>
+                            <span class="icon-incompleto">
+                                <img class="icon-incompleto--img" src="assets/img/icon/incompleto.svg"
+                                    alt="este campo es requerido" [matTooltipPosition]="'above'"
+                                    matTooltip="Debe ingresar la información en el campo para continuar"
+                                    matTooltipClass="info-tooltip" *ngIf="
+                                    (addressForm.get('valorAmortizacion').invalid && addressForm.get('valorAmortizacion').touched) ||
+                                    (addressForm.get('valorAmortizacion').invalid && estaEditando)
+                                  " />
+                            </span>
                         </div>
                     </div>
                 </div>
