--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-validar-requisitos-pago/components/form-listachequeo-expensas/form-listachequeo-expensas.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-validar-requisitos-pago/components/form-listachequeo-expensas/form-listachequeo-expensas.component.html
@@ -3,23 +3,35 @@
         <div class="col-md-12">
             <div class="row">
                 <div class="pr-1">
-                    <label class="label-left" for="listaCheqeueoSelected">Modalidad del contrato</label>
+                    <label class="label-left" for="listaCheqeueoSelected" [ngClass]="{
+                        'color-secondaryColor':
+                          (addressForm.get('listaCheqeueoSelected').invalid && addressForm.get('listaCheqeueoSelected').touched) ||
+                          (addressForm.get('listaCheqeueoSelected').invalid && estaEditando)
+                      }">Modalidad del contrato</label>
                 </div>
                 <div class="col">
                     <mat-form-field class="select-width">
                         <mat-select formControlName="listaCheqeueoSelected" required>
-                            <mat-option *ngFor="let contr of listaChqequeoExpensasArray"
-                                [value]="contr.value">
+                            <mat-option *ngFor="let contr of listaChqequeoExpensasArray" [value]="contr.value">
                                 {{ contr.name }}
                             </mat-option>
                         </mat-select>
                     </mat-form-field>
                 </div>
+                <span class="icon-incompleto">
+                    <img class="icon-incompleto--img" src="assets/img/icon/incompleto.svg" alt="este campo es requerido"
+                        [matTooltipPosition]="'above'"
+                        matTooltip="Debe ingresar la información en el campo para continuar"
+                        matTooltipClass="info-tooltip" *ngIf="
+                (addressForm.get('listaCheqeueoSelected').invalid && addressForm.get('listaCheqeueoSelected').touched) ||
+                (addressForm.get('listaCheqeueoSelected').invalid && estaEditando)
+                " />
+                </span>
             </div>
         </div>
     </div>
     <p class="info-sub-title supportBlack">
-        <span>Criterio de pago: <b>Lista de chequeo número u1 expensas</b></span>
+        <span>Criterio de pago: <b>Lista de chequeo número u expensas</b></span>
         <span>Tipo de pago: <b>Costos y variables</b></span>
     </p>
     <div class="table-responsive">
@@ -59,7 +71,7 @@
     </div>
     <div class="text-center mb-2em" style="margin-top: 10px;">
         <button mat-button color="warn" class="btn-guardar" type="submit">
-          <img src="assets/img/icon/guardar.svg" alt="Regresar">
+            <img src="assets/img/icon/guardar.svg" alt="Regresar">
         </button>
-      </div>
+    </div>
 </form>
