--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-validar-requisitos-pago/components/form-solicitud-expensas/form-solicitud-expensas.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-validar-requisitos-pago/components/form-solicitud-expensas/form-solicitud-expensas.component.html
@@ -9,10 +9,13 @@
             <p><strong>Llave MEN:</strong> {{ addressForm.get( 'llaveMen' ).value }} </p>
             <p><strong>Número de radicado SAC:</strong> {{ addressForm.get( 'numeroRadicadoSAC' ).value }} </p>
             <p><strong>Número de factura:</strong> {{ addressForm.get( 'numeroFactura' ).value }} </p>
-            <p><strong>Valor facturado:</strong> ${{ addressForm.get( 'valorFacturado' ).value | currency:' ':'symbol-narrow':'.0-0' }} </p>
+            <p><strong>Valor facturado:</strong> ${{ addressForm.get( 'valorFacturado' ).value | currency:'
+                ':'symbol-narrow':'.0-0' }} </p>
             <p><strong>Tipo de pago:</strong> {{ addressForm.get( 'tipoPago' ).value.nombre }} </p>
-            <p><strong>Concepto de pago para el criterio:</strong> {{ addressForm.get( 'conceptoPagoCriterio' ).value.nombre }} </p>
-            <p><strong>Valor facturado al concepto:</strong> ${{ addressForm.get( 'valorFacturadoConcepto' ).value | currency:' ':'symbol-narrow':'.0-0' }} </p>
+            <p><strong>Concepto de pago para el criterio:</strong> {{ addressForm.get( 'conceptoPagoCriterio'
+                ).value.nombre }} </p>
+            <p><strong>Valor facturado al concepto:</strong> ${{ addressForm.get( 'valorFacturadoConcepto' ).value |
+                currency:' ':'symbol-narrow':'.0-0' }} </p>
         </mat-card-content>
     </mat-card>
 </ng-container>
@@ -29,22 +32,38 @@
                     <div class="col-md-8">
                         <div class="row">
                             <div class="pr-1">
-                                <label class="label-left" for="llaveMen">Llave MEN</label>
+                                <label class="label-left" for="llaveMen" [ngClass]="{
+                                    'color-secondaryColor':
+                                      (addressForm.get('llaveMen').invalid && addressForm.get('llaveMen').touched) ||
+                                      (addressForm.get('llaveMen').invalid && estaEditando)
+                                  }">Llave MEN</label>
                             </div>
                             <div class="col d-flex">
                                 <mat-form-field class="full-width">
-                                    <input matInput #llaveMen="matAutocompleteTrigger" type="text" maxlength="100" required [matAutocomplete]="auto" formControlName="llaveMen">
+                                    <input matInput #llaveMen="matAutocompleteTrigger" type="text" maxlength="100"
+                                        required [matAutocomplete]="auto" formControlName="llaveMen">
                                     <mat-autocomplete #auto="matAutocomplete">
-                                        <mat-option *ngFor="let llave of llavesMenArray" (click)="seleccionAutocomplete(llave)" [value]="llave.llaveMen">
+                                        <mat-option *ngFor="let llave of llavesMenArray"
+                                            (click)="seleccionAutocomplete(llave)" [value]="llave.llaveMen">
                                             {{llave.llaveMen}}
                                         </mat-option>
                                     </mat-autocomplete>
                                     <input type="hidden" formControlName="llaveMenSeleccionada">
                                 </mat-form-field>
-                                <button type="button" mat-button color="primary" class="busqueda--img" (click)="getLlaveMen( llaveMen ); $event.stopPropagation()">
+                                <button type="button" mat-button color="primary" class="busqueda--img"
+                                    (click)="getLlaveMen( llaveMen ); $event.stopPropagation()">
                                     <img src="assets/img/icon/lupa.svg" alt="Buscar" style="width: 20px; height: 20px;">
                                 </button>
                             </div>
+                            <span class="icon-incompleto">
+                                <img class="icon-incompleto--img" src="assets/img/icon/incompleto.svg"
+                                    alt="este campo es requerido" [matTooltipPosition]="'above'"
+                                    matTooltip="Debe ingresar la información en el campo para continuar"
+                                    matTooltipClass="info-tooltip" *ngIf="
+                                    (addressForm.get('llaveMen').invalid && addressForm.get('llaveMen').touched) ||
+                                    (addressForm.get('llaveMen').invalid && estaEditando)
+                                  " />
+                            </span>
                         </div>
                     </div>
                 </div>
@@ -52,7 +71,11 @@
                     <div class="col-md-8">
                         <div class="row">
                             <div class="pr-1">
-                                <label for="numeroRadicadoSAC" class="label-left">Número de radicado SAC</label>
+                                <label for="numeroRadicadoSAC" class="label-left" [ngClass]="{
+                                    'color-secondaryColor':
+                                      (addressForm.get('numeroRadicadoSAC').invalid && addressForm.get('numeroRadicadoSAC').touched) ||
+                                      (addressForm.get('numeroRadicadoSAC').invalid && estaEditando)
+                                  }">Número de radicado SAC</label>
                             </div>
                             <div class="col d-flex">
                                 <mat-form-field class="full-width">
@@ -61,6 +84,15 @@
                                 </mat-form-field>
                                 <span class="contador">{{20 - numeroRadicadoSAC.value.length}}</span>
                             </div>
+                            <span class="icon-incompleto">
+                                <img class="icon-incompleto--img" src="assets/img/icon/incompleto.svg"
+                                    alt="este campo es requerido" [matTooltipPosition]="'above'"
+                                    matTooltip="Debe ingresar la información en el campo para continuar"
+                                    matTooltipClass="info-tooltip" *ngIf="
+                                    (addressForm.get('numeroRadicadoSAC').invalid && addressForm.get('numeroRadicadoSAC').touched) ||
+                                    (addressForm.get('numeroRadicadoSAC').invalid && estaEditando)
+                                  " />
+                            </span>
                         </div>
                     </div>
                 </div>
@@ -68,7 +100,11 @@
                     <div class="col-md-8">
                         <div class="row">
                             <div class="pr-1">
-                                <label for="numeroFactura" class="label-left">Número de factura</label>
+                                <label for="numeroFactura" class="label-left" [ngClass]="{
+                                    'color-secondaryColor':
+                                      (addressForm.get('numeroFactura').invalid && addressForm.get('numeroFactura').touched) ||
+                                      (addressForm.get('numeroFactura').invalid && estaEditando)
+                                  }">Número de factura</label>
                             </div>
                             <div class="col d-flex">
                                 <mat-form-field class="full-width">
@@ -77,6 +113,15 @@
                                 </mat-form-field>
                                 <span class="contador">{{20 - numeroFactura.value.length}}</span>
                             </div>
+                            <span class="icon-incompleto">
+                                <img class="icon-incompleto--img" src="assets/img/icon/incompleto.svg"
+                                    alt="este campo es requerido" [matTooltipPosition]="'above'"
+                                    matTooltip="Debe ingresar la información en el campo para continuar"
+                                    matTooltipClass="info-tooltip" *ngIf="
+                                    (addressForm.get('numeroFactura').invalid && addressForm.get('numeroFactura').touched) ||
+                                    (addressForm.get('numeroFactura').invalid && estaEditando)
+                                  " />
+                            </span>
                         </div>
                     </div>
                 </div>
@@ -84,7 +129,11 @@
                     <div class="col-md-8">
                         <div class="row">
                             <div class="pr-1">
-                                <label class="label-left" for="valorFacturado">
+                                <label class="label-left" for="valorFacturado" [ngClass]="{
+                                    'color-secondaryColor':
+                                      (addressForm.get('valorFacturado').invalid && addressForm.get('valorFacturado').touched) ||
+                                      (addressForm.get('valorFacturado').invalid && estaEditando)
+                                  }">
                                     Valor facturado
                                 </label>
                             </div>
@@ -98,6 +147,15 @@
                                 <span class="contador" [matTooltipPosition]="'above'" matTooltip="Campo numérico"
                                     matTooltipClass="info-tooltip">{{20 - valorFacturado.value.length}}</span>
                             </div>
+                            <span class="icon-incompleto">
+                                <img class="icon-incompleto--img" src="assets/img/icon/incompleto.svg"
+                                    alt="este campo es requerido" [matTooltipPosition]="'above'"
+                                    matTooltip="Debe ingresar la información en el campo para continuar"
+                                    matTooltipClass="info-tooltip" *ngIf="
+                                    (addressForm.get('valorFacturado').invalid && addressForm.get('valorFacturado').touched) ||
+                                    (addressForm.get('valorFacturado').invalid && estaEditando)
+                                  " />
+                            </span>
                         </div>
                     </div>
                 </div>
@@ -105,7 +163,11 @@
                     <div class="col-md-8">
                         <div class="row">
                             <div class="pr-1">
-                                <label class="label-left" for="tipoPago">Tipo de pago</label>
+                                <label class="label-left" for="tipoPago" [ngClass]="{
+                                    'color-secondaryColor':
+                                      (addressForm.get('tipoPago').invalid && addressForm.get('tipoPago').touched) ||
+                                      (addressForm.get('tipoPago').invalid && estaEditando)
+                                  }">Tipo de pago</label>
                             </div>
                             <div class="col">
                                 <mat-form-field class="select-width">
@@ -116,6 +178,15 @@
                                     </mat-select>
                                 </mat-form-field>
                             </div>
+                            <span class="icon-incompleto">
+                                <img class="icon-incompleto--img" src="assets/img/icon/incompleto.svg"
+                                    alt="este campo es requerido" [matTooltipPosition]="'above'"
+                                    matTooltip="Debe ingresar la información en el campo para continuar"
+                                    matTooltipClass="info-tooltip" *ngIf="
+                                  (addressForm.get('tipoPago').invalid && addressForm.get('tipoPago').touched) ||
+                                  (addressForm.get('tipoPago').invalid && estaEditando)
+                                  " />
+                            </span>
                         </div>
                     </div>
                 </div>
@@ -123,18 +194,32 @@
                     <div class="col-md-12">
                         <div class="row">
                             <div class="pr-1">
-                                <label class="label-left" for="conceptoPagoCriterio">Concepto de pago para el
+                                <label class="label-left" for="conceptoPagoCriterio" [ngClass]="{
+                                    'color-secondaryColor':
+                                      (addressForm.get('conceptoPagoCriterio').invalid && addressForm.get('conceptoPagoCriterio').touched) ||
+                                      (addressForm.get('conceptoPagoCriterio').invalid && estaEditando)
+                                  }">Concepto de pago para el
                                     criterio</label>
                             </div>
                             <div class="col">
                                 <mat-form-field class="select-width">
                                     <mat-select formControlName="conceptoPagoCriterio" required>
-                                        <mat-option *ngFor="let conceptoPagoCriterio of conceptoPagoCriterioArray" [value]="conceptoPagoCriterio">
+                                        <mat-option *ngFor="let conceptoPagoCriterio of conceptoPagoCriterioArray"
+                                            [value]="conceptoPagoCriterio">
                                             {{ conceptoPagoCriterio.nombre }}
                                         </mat-option>
                                     </mat-select>
                                 </mat-form-field>
                             </div>
+                            <span class="icon-incompleto">
+                                <img class="icon-incompleto--img" src="assets/img/icon/incompleto.svg"
+                                    alt="este campo es requerido" [matTooltipPosition]="'above'"
+                                    matTooltip="Debe ingresar la información en el campo para continuar"
+                                    matTooltipClass="info-tooltip" *ngIf="
+                                  (addressForm.get('conceptoPagoCriterio').invalid && addressForm.get('conceptoPagoCriterio').touched) ||
+                                  (addressForm.get('conceptoPagoCriterio').invalid && estaEditando)
+                                  " />
+                            </span>
                         </div>
                     </div>
                 </div>
@@ -142,20 +227,35 @@
                     <div class="col-md-8">
                         <div class="row">
                             <div class="pr-1">
-                                <label class="label-left" for="valorFacturadoConcepto">
+                                <label class="label-left" for="valorFacturadoConcepto"
+                                [ngClass]="{
+                                    'color-secondaryColor':
+                                      (addressForm.get('valorFacturadoConcepto').invalid && addressForm.get('valorFacturadoConcepto').touched) ||
+                                      (addressForm.get('valorFacturadoConcepto').invalid && estaEditando)
+                                  }">
                                     Valor facturado al concepto
                                 </label>
                             </div>
                             <div class="col d-flex">
                                 <mat-form-field class="full-width">
                                     <input matInput #valorFacturadoConcepto currencyMask maxlength="20" required
-                                        formControlName="valorFacturadoConcepto" (keypress)="validateNumberKeypress($event)"
+                                        formControlName="valorFacturadoConcepto"
+                                        (keypress)="validateNumberKeypress($event)"
                                         onKeyPress="if(this.value.length>=this.maxLength) return false;"
                                         [options]="{ prefix: '$ ', thousands: '.', precision: '0', align: 'center' }">
                                 </mat-form-field>
                                 <span class="contador" [matTooltipPosition]="'above'" matTooltip="Campo numérico"
                                     matTooltipClass="info-tooltip">{{20 - valorFacturadoConcepto.value.length}}</span>
                             </div>
+                            <span class="icon-incompleto">
+                                <img class="icon-incompleto--img" src="assets/img/icon/incompleto.svg"
+                                    alt="este campo es requerido" [matTooltipPosition]="'above'"
+                                    matTooltip="Debe ingresar la información en el campo para continuar"
+                                    matTooltipClass="info-tooltip" *ngIf="
+                                  (addressForm.get('valorFacturadoConcepto').invalid && addressForm.get('valorFacturadoConcepto').touched) ||
+                                  (addressForm.get('valorFacturadoConcepto').invalid && estaEditando)
+                                  " />
+                            </span>
                         </div>
                     </div>
                 </div>
